<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingEnd="@dimen/activity_horizontal_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingStart="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">
  <EditText
    android:id="@+id/activity_edit_editText1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:hint="@string/edit_place_description"
    android:paddingBottom="@dimen/activity_horizontal_margin"/>
  <TextView
    android:id="@+id/activity_edit_textView1"
    style="@style/TextAppearance.AppCompat.Medium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/res_type"
    android:textColor="@android:color/primary_text_light"/>
  <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:weightSum="3">
    <RadioButton
      android:id="@+id/radButton1"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:checked="false"
      android:text="@string/res_type_chinese"
      />
    <RadioButton
      android:id="@+id/radButton2"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/res_type_western"
      />
    <RadioButton
      android:id="@+id/radButton3"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/res_type_japanese"
      />
  </RadioGroup>
  <Button
    android:id="@+id/activity_edit_saveButton"
    style="@style/TextAppearance.AppCompat.Large"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:text="@string/add_button"
    android:textColor="@android:color/primary_text_dark"/>


</LinearLayout>